create some module
basic, book-list, data-structure-algorithm, database, interview-guide, network, operation-system, other, question, system-design and tool, initialize build.gradle of root directory and add createBuildScript task to every module for auto-generate sub-module project structure.